; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-sharedata.c_lisdirty.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-sharedata.c_lisdirty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.table = type { i32 }
%struct.state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lisdirty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lisdirty(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.table*, align 8
  %4 = alloca %struct.state*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call %struct.table* @get_table(i32* %6, i32 1)
  store %struct.table* %7, %struct.table** %3, align 8
  %8 = load %struct.table*, %struct.table** %3, align 8
  %9 = getelementptr inbounds %struct.table, %struct.table* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.state* @lua_touserdata(i32 %10, i32 1)
  store %struct.state* %11, %struct.state** %4, align 8
  %12 = load %struct.state*, %struct.state** %4, align 8
  %13 = getelementptr inbounds %struct.state, %struct.state* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %5, align 4
  %15 = load i32*, i32** %2, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @lua_pushboolean(i32* %15, i32 %16)
  ret i32 1
}

declare dso_local %struct.table* @get_table(i32*, i32) #1

declare dso_local %struct.state* @lua_touserdata(i32, i32) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
